<resources>
    <string name="app_name">Notes</string>
    <string name="edit_button">edit button</string>
    <string name="new_note">new note</string>
    <string name="title">title</string>
    <string name="body">write your note</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="update">update</string>
    <string name="create_new">Create new note</string>
    <string name="save_note">Save note</string>
</resources>